refactor: add mapper and update service and scheduler